deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-deployment
spec:
  replicas: 3

  selector:
    matchLabels:
      app: health-app

  template:
    metadata:
      labels:
        app: health-app
    spec:
      containers:
        - name: health
          image: defimov/otus_lesson2:v2
          ports:
            - containerPort: 8000
              name: web
          livenessProbe:
            httpGet:
              port: 8000
              path: /
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            periodSeconds: 5
