pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: health-check
  labels:
    app: health-check
spec:
  containers:
    - name: health-check
      image: defimov/otus_lesson2:01
      ports:
        - containerPort: 80
